--- a/index.html
+++ b/index.html
@@ -63,32 +63,31 @@
                     <img src="images/about_me/mojePhoto.JPG">
                 </div>
                 <div class="about-text">
-                    <p>Nazywam się <strong>Katarzyna Trześniewska</strong>. Z wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
-                        możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
-                        gier planszowych.</p>
-                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
-                        przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
-                    <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę
-                        przeze mnie.
+                    <p>Nazywam się <strong>Katarzyna&nbsp;Trześniewska</strong>. Z wykształcenia ekonomistka, z zamiłowania <strong>Front-&nbsp;End&nbsp;Developer</strong>. Zafascynowana
+                        możliwościami <strong>wizualnymi</strong> aktualnych <strong>technologii webowych</strong>. Amatorka biegów narciarskich oraz miłośniczka
+                        <strong>gier planszowych</strong>.</p>
+                    <p>Ciągły <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
+                        przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną <strong>motywację w działaniu</strong>.</p>
+                    <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę w tym kierunku jako <strong>Junior Front-end Developer</strong>.
                     </p>
                 </div>
                 <div class="about-text not-visible">
                     <br>
-                    <p>Rok temu podjęłam decyzję o zmianie ścieżki rozwoju zawodowego w stronę IT. Zdecydowałam się pójść w
-                        kierunku Front-end, ponieważ jestem wrażliwa na estetykę oraz formę graficzną prezentowanych w sieci
-                        treści. Lubię również rozwijać wizualne efekty swoich projektów.</p>
-                    <p>W maju tego roku ukończyłam intensywny bootcamp ‘Front-end Developer’ w Kodilli. Trzymiesięczny kurs
-                        dał mi solidne podstawy oraz pozwolił poznać aktualnie stosowane technologie webowe. Najlepiej odnajduję
-                        się w języku CSS3, który oferuje ogromne możliwości stylów oraz animacji. Poznanie JavaScript oraz
-                        jQuery otworzyło przed mną świat języków scryptowych, który mnie bardzo zainspirował. Mam zamiar go
-                        coraz lepiej zgłębiać. Aktualnie poznaję i wprowadzam do projektów AngularJS.</p>
-                    <p> Moje środowisko developerskie to aktualnie: Visual Studio Code (pracowałam również na SublimeText3); system kontroli
-                        wersji Git; NMP: tusk runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
+                    <p>Rok temu podjęłam decyzję o zmianie ścieżki rozwoju zawodowego w stronę <strong>IT</strong>. Zdecydowałam się pójść w
+                        kierunku <strong>Front-end</strong>, ponieważ jestem wrażliwa na <strong>estetykę</strong> oraz <strong>formę graficzną</strong> prezentowanych w sieci
+                        treści. Lubię również rozwijać <strong>wizualne</strong> efekty swoich projektów.</p>
+                    <p>W maju tego roku ukończyłam intensywny <strong>bootcamp ‘Front-end Developer’</strong> w Kodilli. Trzymiesięczny kurs
+                        dał mi solidne podstawy oraz pozwolił poznać <strong>aktualnie</strong> stosowane <strong>technologie webowe</strong>. Najlepiej odnajduję
+                        się w języku <strong>CSS3</strong>, który w połączeniu z <strong>SASS</strong> oferuje ogromne możliwości tworzenia stylów oraz animacji. Poznanie <strong>JavaScript</strong> oraz
+                        <strong>jQuery</strong> otworzyło przed mną świat <strong>języków scryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go
+                        coraz lepiej zgłębiać. Aktualnie poznaję i wprowadzam do projektów <strong>AngularJS</strong>.</p>
+                    <p> Moje <strong>środowisko developerskie</strong> to aktualnie: <strong>Visual Studio Code</strong> (pracowałam również na SublimeText3); system kontroli
+                        wersji <strong>Git</strong>; <strong>NMP</strong>: tusk runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
                         SASS na CSS oraz dodanie niezbędnych prefixów.</p>
-                    <p>Programowanie stało się jedną z moich pasji. Tworzenie aplikacji webowych i nadawanie im piękna oraz
-                        możliwości interakcji z użytkownikiem sprawia mi dużo radości. Zawsze szukam rozwiązań napotkanych problemów,
-                        dzięki czemu odkrywam całkiem nowe rozwiązania i to daje największą satysfakcję.</p>
-                        <p>Ponieżej zaprezentowałam swoje dotychczasowe projekty, które w dalszym ciągu rozwijam i doskonale. </p>
+                    <p><strong>Programowanie</strong> stało się jedną z moich pasji. Tworzenie <strong>aplikacji webowych</strong> i nadawanie im piękna oraz
+                        możliwości <strong>interakcji</strong> z użytkownikiem sprawia mi dużo radości. Zawsze <strong>szukam rozwiązań</strong> napotkanych problemów,
+                        dzięki czemu odkrywam całkiem nowe rozwiązania i to daje największą <strong>satysfakcję</strong>.</p>
+                        <p>Ponieżej zaprezentowałam swoje dotychczasowe <strong>projekty</strong>, które w dalszym ciągu <strong>rozwijam</strong> i <strong>doskonale</strong>. Zachęcam do ich przejżenia. Jęśli masz jakieś uwagi nie wahaj sie ze mną <strong>skontaktować</strong>!</p>
                 </div>
                 <button id="read_more">Czytaj więcej</button>
             </div>
