--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
-                            <p>Projekt służący przećwiczeniu możliwości formularzy z użuciem populrnej biblioteki Bootstrap.
+                            <p>Projekt służący przećwiczeniu możliwości formularzy z użuciem popularnej biblioteki Bootstrap.
                                 Responsywny z walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass.
                                 W projekcie prowadzony jest system kontroli wersji. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
@@ -245,9 +245,9 @@
                     <div class="details">
                         <div class="description">
                             <h4>Gra w Marynarza</h4>
-                            <p>Aplikacja do gry w popularnego Marynarza. Aplikacja napisana w ramach bootcampu z wykorzysaniem
-                                Bootrapa oraz JavaScript Projekt pozwolił mi przećwiczyć tworzenie zmiennych, istrukcji warunkowych
-                                if, swich oraz definiowanie funkcji a także manimulację elementami DOM. </p>
+                            <p>Aplikacja do gry w popularnego Marynarza. Aplikacja napisana w ramach bootcampu z wykorzystaniem
+                                Bootstrapa oraz JavaScript. Projekt pozwolił mi przećwiczyć tworzenie zmiennych, istrukcji warunkowych
+                                if, swich oraz definiowanie funkcji a także manipulację elementami DOM. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -272,7 +272,7 @@
                         <div class="description">
                             <h4>Kanban Board</h4>
                             <p>Aplikacja Kanban Board służy do zarządzania zadaniami i projektami. Projekt ten został zaprogramowany
-                                w ramach bootcampiu. W projekcie jest użyty jQuery oraz jQueryUI. Wykonaie projektu pozwoliło
+                                w ramach bootcampu. W projekcie jest użyty jQuery oraz jQueryUI. Wykonanie projektu pozwoliło
                                 mi poznać podstawy działania komunikacji z serwerem za pomocą Ajax oraz API. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
