--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <p>Ciągły
                         <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma,
                         że przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną
-                        <strong>motywację w działaniu</strong>.</p>
-                    <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę w tym kierunku jako
+                        <strong>motywację do działania</strong>.</p>
+                    <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę jako
                         <strong>Junior Front-end Developer</strong>.
                     </p>
                 </div>
@@ -95,27 +95,26 @@
                         <strong>SASS</strong> oferuje ogromne możliwości tworzenia stylów oraz animacji. Poznanie
                         <strong>JavaScript</strong> oraz
                         <strong>jQuery</strong> otworzyło przed mną świat
-                        <strong>języków scryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go coraz lepiej zgłębiać.
+                        <strong>języków skryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go coraz bardziej zgłębiać.
                         Aktualnie poznaję i wprowadzam do projektów
                         <strong>AngularJS</strong>.</p>
                     <p> Moje
                         <strong>środowisko developerskie</strong> to aktualnie:
                         <strong>Visual Studio Code</strong> (pracowałam również na SublimeText3); system kontroli wersji
                         <strong>Git</strong>;
-                        <strong>NMP</strong>: tusk runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
+                        <strong>NPM</strong>: task runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
                         SASS na CSS oraz dodanie niezbędnych prefixów.</p>
                     <p>
                         <strong>Programowanie</strong> stało się jedną z moich pasji. Tworzenie
                         <strong>aplikacji webowych</strong> i nadawanie im piękna oraz możliwości
                         <strong>interakcji</strong> z użytkownikiem sprawia mi dużo radości. Zawsze
-                        <strong>szukam rozwiązań</strong> napotkanych problemów, dzięki czemu odkrywam całkiem nowe rozwiązania i
-                        to daje największą
+                        <strong>szukam rozwiązań</strong> napotkanych problemów, dzięki czemu odkrywam całkiem nowe możliwości i
+                        to daje największą mi
                         <strong>satysfakcję</strong>.</p>
                     <p>Ponieżej zaprezentowałam swoje dotychczasowe
                         <strong>projekty</strong>, które w dalszym ciągu
-                        <strong>rozwijam</strong> i
-                        <strong>doskonale</strong>. Zachęcam do ich przejżenia. Jęśli masz jakieś uwagi nie wahaj sie ze mną
-                        <strong>skontaktować</strong>!</p>
+                        <strong>rozwijam</strong> i 
+                        <strong>doskonalę</strong>. Zachęcam do ich przejżenia. Jęśli masz jakieś uwagi <strong>skontaktuj</strong> się ze mną!</p>
                 </div>
                 <button id="read_more">Czytaj więcej</button>
             </div>
@@ -193,9 +192,9 @@
                             <h4>Cięcie szablonu PSD do HTML</h4>
                             <p>Szablon wykonany na podstawie otrzymanego pliku w formacie PSD. Samodzielnie zaprogramowany w
                                 HTML i CSS szablon przy użyciu Sass, Bootstrap, JS oraz jQuery. Wykorzystane możliwości Sass
-                                to: variables, nesting oraz mixins. Carousel oraz Grid z Bootsrapa. JS oraz jQuery pozwoliły
+                                to: variables, nesting oraz mixins. Carousel oraz Grid z Bootstrapa. JS oraz jQuery pozwoliły
                                 uzyskać interaktywność wybranych przycisków oraz animacji ikon. Responsywność strony uzyskana
-                                dzięki Boostrap Grid oraz Media querre. Projekt wykonany z kontrolą wersji Git. </p>
+                                dzięki Bootstrap Grid oraz Media querre. Projekt wykonany z kontrolą wersji Git. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -220,7 +219,7 @@
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
-                            <p>Projekt służący przećwiczeniu możliwości formularzy z użuciem popularnej biblioteki Bootstrap.
+                            <p>Projekt służący przećwiczeniu możliwości formularzy z użyciem popularnej biblioteki Bootstrap.
                                 Responsywny z walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass.
                                 W projekcie prowadzony jest system kontroli wersji. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
@@ -247,7 +246,7 @@
                         <div class="description">
                             <h4>Gra w Marynarza</h4>
                             <p>Aplikacja do gry w popularnego Marynarza. Aplikacja napisana w ramach bootcampu z wykorzystaniem
-                                Bootstrapa oraz JavaScript. Projekt pozwolił mi przećwiczyć tworzenie zmiennych, istrukcji warunkowych
+                                Bootstrapa oraz JavaScript. Projekt pozwolił mi przećwiczyć tworzenie zmiennych, instrukcji warunkowych
                                 if, swich oraz definiowanie funkcji a także manipulację elementami DOM. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
